[package]
name = "ratio"
version = "1.0.0"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2018"
description = "Calculate the ratios of two or more numbers"
repository = "https://git.dragonma.us/dragonmaus/ratio.rs"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false

[dependencies]
program = { git = "https://git.dragonma.us/dragonmaus/program.rs", version = "1" }
