[package]
name = "ratio"
version = "2.0.2"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2021"
description = "Calculate the ratio of two numbers"
repository = "https://git.dragonma.us/rust/ratio"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false

[dependencies.program]
git = "git://git.dragonma.us/rust/program"
